improved ui for mobile

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="container">
         <div class="header">
             <div class="header-content">
+                <img src="saru-profile.png" alt="Foto de perfil de Raphael Antonio da Silva" class="profile-photo">
                 <h1 class="name">Raphael Antonio da Silva</h1>
                 <p class="title">Especialista em Marketing Digital & Inteligência Artificial</p>
                 <div class="contact-info">
