fix: update stylesheet and image paths for consistency feat: add Vercel configuration for URL rewrites

--- a/raphaelsaru/index.html
+++ b/raphaelsaru/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Raphael Antonio da Silva - Currículo</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="container">
@@ -14,7 +14,7 @@
         </div>
             <div class="header-content">
                 
-                <img src="saru-profile.png" alt="Foto de perfil de Raphael Antonio da Silva" class="profile-photo">
+                <img src="./saru-profile.png" alt="Foto de perfil de Raphael Antonio da Silva" class="profile-photo">
                 <h1 class="name">Raphael Antonio da Silva</h1>
                 <p class="title" id="title-txt">Especialista em Marketing Digital & Inteligência Artificial</p>
                 <div class="contact-info">
