text align left

--- a/raphaelsaru/index.html
+++ b/raphaelsaru/index.html
@@ -234,7 +234,7 @@ const translations = {
     'title-txt': 'Digital Marketing & Artificial Intelligence Specialist',
     'age-txt': '33 years old',
     'location-txt': 'São Paulo - Brazil',
-    'objective-title': '🎯 Professional Objective',
+    'objective-title': '🎯 Professional Summary',
     'objective-txt': 'Work with results-driven digital marketing and artificial intelligence, managing paid traffic clients and developing innovative AI solutions to help entrepreneurs and companies. My goal is to automate processes and assist in strategic decision-making through advanced analysis and custom applications.',
     'exp-title': '💼 Professional Experience',
     'exp-prizely-position': 'Digital Entrepreneur',
